# repo-risk-radar

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  security.yml
docs/: SKILL_REGISTRY.md  security-audit.md
src/repo_risk_radar/: __init__.py  cli.py  scanner.py
tests/: test_cli.py  test_scanner.py
