[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-risk-radar"
version = "0.1.0"
description = "Local-first repository risk scanner for secrets, workflow permissions, and dangerous automation patterns"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ABDUL BASIT" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==9.1.1",
]

[project.scripts]
repo-risk-radar = "repo_risk_radar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
